[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/Minimap.gd" type="Script" id=1]
[ext_resource path="res://assets/frame.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Players/PlayerUI/HealthUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/background.png" type="Texture" id=4]
[ext_resource path="res://assets/rl.png" type="Texture" id=5]
[ext_resource path="res://assets/tb.png" type="Texture" id=6]
[ext_resource path="res://assets/player.png" type="Texture" id=7]

[sub_resource type="CapsuleShape2D" id=1]
radius = 12.0
height = 72.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 31.5, 7.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 20, 10 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 19.5, 10 )

[node name="KinematicBody2D" type="KinematicBody2D"]
z_index = 1
script = ExtResource( 1 )

[node name="NavTerm" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="NavTerm"]
position = Vector2( 172, -118 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
scale = Vector2( 10.9687, 11.1562 )
current = true
zoom = Vector2( 0.5, 0.5 )
smoothing_speed = 10.0

[node name="UI" type="Area2D" parent="."]
z_index = 1

[node name="HealthUI" parent="UI" instance=ExtResource( 3 )]
margin_left = -765.0
margin_top = -501.0
margin_right = -705.0
margin_bottom = -490.0
rect_scale = Vector2( 7, 7 )

[node name="Minimap" type="Area2D" parent="UI"]

[node name="Sprite" type="Sprite" parent="UI/Minimap"]
position = Vector2( 588, -322 )
scale = Vector2( 13.8125, 12.625 )
z_index = 2
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="UI/Minimap"]
position = Vector2( 597, -319 )
scale = Vector2( 11.1875, 9.875 )
texture = ExtResource( 4 )

[node name="Sprite3" type="Sprite" parent="UI/Minimap"]
position = Vector2( 585, -329 )
scale = Vector2( 2.75, 2.625 )
texture = ExtResource( 7 )

[node name="LeftBounds" type="Sprite" parent="UI/Minimap"]
position = Vector2( 426, -327 )
scale = Vector2( 3.34375, 10.4844 )
texture = ExtResource( 5 )

[node name="RightBounds" type="Sprite" parent="UI/Minimap"]
position = Vector2( 749, -328 )
scale = Vector2( 4.8125, 10.125 )
texture = ExtResource( 5 )

[node name="TopBounds" type="Sprite" parent="UI/Minimap"]
position = Vector2( 584, -465 )
scale = Vector2( 11.0312, 3.45312 )
texture = ExtResource( 6 )

[node name="BottomBounds" type="Sprite" parent="UI/Minimap"]
position = Vector2( 596, -169 )
scale = Vector2( 10.8594, 2.9375 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 183.5, -123.5 )
rotation = -1.5708
shape = SubResource( 2 )
one_way_collision = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 172, -163 )
rotation = 3.14159
shape = SubResource( 3 )
one_way_collision = true

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
position = Vector2( 171.5, -87 )
shape = SubResource( 4 )
one_way_collision = true

[connection signal="area_entered" from="NavTerm" to="." method="_on_NavTerm_area_entered"]
[connection signal="area_exited" from="NavTerm" to="." method="_on_NavTerm_area_exited"]
